--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,8 +8,23 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+
+        <!-- Librerias Bootstrap -->
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<meta charset="utf-8">
+		<meta name="generator" content="Bootply" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<link href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")" rel="stylesheet">
+		<!--[if lt IE 9]>
+			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+		<link href="@routes.Assets.versioned("stylesheets/styles.css")" rel="stylesheet">
     </head>
     <body>
         @content
+
+        <!-- script references -->
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+		<script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")"></script>
     </body>
 </html>
