--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
-
+		@title
         <!-- Librerias Bootstrap -->
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
