Crear usuario, login vista, crear odontologVista

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,3 @@
-@(message: String)
-
-@main("Sonrisitas Página Principal") {
+@templateMain("Clinica Sonrisitas") {	
+	<img src="@routes.Assets.versioned("img/sonrisitas/DIENTE.gif")" alt="" class="imagenSonrisitas">
 }
