--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,6 +15,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")" rel="stylesheet">
         <link href="@routes.Assets.versioned("stylesheets/bootstrap-responsive.min.css")" rel="stylesheet">
+        <link href="@routes.Assets.versioned("stylesheets/styles.css")" rel="stylesheet">
+        <link href="@routes.Assets.versioned("stylesheets/signin.css")" rel="stylesheet">
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600" rel="stylesheet">
         <!--[if lt IE 9]>
             <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
