--- a/app/views/signUp.scala.html
+++ b/app/views/signUp.scala.html
@@ -1,96 +1,64 @@
+@templateMain("signUp"){
+<div class="container">
+	<div ng-controller="AlertsCtrl">
+		<div ng-repeat="alert in alerts" class="alert alert-danger">{{ alert.msg }}</div>		
+	</div>
+	<div ng-view=""></div>
+</div>
 
-@main("signUp"){
-	<div class="navbar navbar-fixed-top">
-	
-	<div class="navbar-inner">
-		
-		<div class="container">
-			
-			<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</a>
-			
-			<a class="brand" href="index.html">
-				Bootstrap Admin Template				
-			</a>		
-			
-			<div class="nav-collapse">
-				<ul class="nav pull-right">
-					<li class="">						
-						<a href="login.html" class="">
-							Already have an account? Login now
-						</a>
-						
-					</li>
-					<li class="">						
-						<a href="index.html" class="">
-							<i class="icon-chevron-left"></i>
-							Back to Homepage
-						</a>
-						
-					</li>
-				</ul>
-				
-			</div><!--/.nav-collapse -->	
-	
-		</div> <!-- /container -->
-		
-	</div> <!-- /navbar-inner -->
-	
-</div> <!-- /navbar -->
-
-
-
-<div class="account-container register">
+<div ng-controller="SignUpController as singin" class="account-container register">
 	
 	<div class="content clearfix">
 		
-		<form action="#" method="post">
-		
-			<h1>Signup for Free Account</h1>			
+		<form ng-submit="agregarUsuario()">
+
+			<h1>Registro de Usuario</h1>			
 			
-			<div class="login-fields">
-				
-				<p>Create your free account:</p>
+			<div class="login-fields">							
 				
 				<div class="field">
-					<label for="firstname">First Name:</label>
-					<input type="text" id="firstname" name="firstname" value="" placeholder="First Name" class="login" />
+					<label for="usuario">Usuario:</label>
+					<input ng-model="usuario" type="text" id="usuario" name="usuario" value="" placeholder="Usuario" class="login" />
 				</div> <!-- /field -->
 				
 				<div class="field">
-					<label for="lastname">Last Name:</label>	
-					<input type="text" id="lastname" name="lastname" value="" placeholder="Last Name" class="login" />
-				</div> <!-- /field -->
-				
-				
-				<div class="field">
-					<label for="email">Email Address:</label>
-					<input type="text" id="email" name="email" value="" placeholder="Email" class="login"/>
-				</div> <!-- /field -->
-				
-				<div class="field">
-					<label for="password">Password:</label>
-					<input type="password" id="password" name="password" value="" placeholder="Password" class="login"/>
+					<label for="password">Password:</label>	
+					<input ng-model="password" type="password" id="password" name="password" value="" placeholder="Password" class="login" />
 				</div> <!-- /field -->
 				
 				<div class="field">
 					<label for="confirm_password">Confirm Password:</label>
-					<input type="password" id="confirm_password" name="confirm_password" value="" placeholder="Confirm Password" class="login"/>
+					<input ng-model="confirmPassword" type="password" id="confirm_password" name="confirm_password" value="" placeholder="Confirma el Password" class="login"/>
 				</div> <!-- /field -->
 				
-			</div> <!-- /login-fields -->
-			
-			<div class="login-actions">
+
+				<div class="field">
+					<p>Pregunta Recuperacion de Contraseña</p>
+					<label for="preguntaRecuperacion">PreguntaRecuperacion:</label>
+					<select style="width: 420px" ng-model="preguntaRecuperacion" name="preguntasRecuperacion" id="preguntasRecuperacion">
+						<option value="¿Cual es tu equipo de futbol favorito?" value="¿Cual es tu equipo de futbol favorito?">¿Cual es tu equipo de futbol favorito?</option>
+						<option value="¿Como se llama tu mascota?">¿Como se llama tu mascota?</option>
+						<option value="¿Como es el apellido de tu Madre?">¿Como es el apellido de tu Madre?</option>
+						<option value="¿Como es el nombre de tu mejor amigo de la Infancia?">¿Como es el nombre de tu mejor amigo?</option>
+					</select>
+				</div>
+
+				<div class="field">
+					<label for="respuesta">Respuesta:</label>
+					<input ng-model="respuestaRecuperacion" type="text" id="respuesta" name="respuesta" value="" placeholder="Respuesta" class="login"/>
+				</div> <!-- /field -->				
+
+				<div class="field">
+					<label for="email">Email:</label>
+					<input ng-model="email" type="text" id="email" name="email" value="email" placeholder="Email" class="login"/>
+				</div> <!-- /field -->				
 				
-				<span class="login-checkbox">
-					<input id="Field" name="Field" type="checkbox" class="field login-checkbox" value="First Choice" tabindex="4" />
-					<label class="choice" for="Field">Agree with the Terms & Conditions.</label>
-				</span>
-									
-				<button class="button btn btn-primary btn-large">Register</button>
+				
+			</div> <!-- /login-fields -->
+			<br>
+			<div class="login-actions">				
+
+				<button type="submit" class="btn btn-primary btn-large">Register</button>
 				
 			</div> <!-- .actions -->
 			
@@ -99,12 +67,6 @@
 	</div> <!-- /content -->
 	
 </div> <!-- /account-container -->
-
-
-<!-- Text Under Box -->
-<div class="login-extra">
-	Already have an account? <a href="login.html">Login to your account</a>
-</div> <!-- /login-extra -->
 
 
 }
