--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -6,7 +6,7 @@
     <!-- Boostrap Css -->
     <link rel="stylesheet" href="@routes.Assets.versioned("bower_components/bootstrap/dist/css/bootstrap.min.css")">
     <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap-responsive.min.css")">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600" rel="stylesheet">
     <link href="@routes.Assets.versioned("stylesheets/font-awasome.css")" rel="stylesheet">
     <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/style.css")">
     
