--- a/public/partials/home/partial-home-reservar-citas.html
+++ b/public/partials/home/partial-home-reservar-citas.html
@@ -1,5 +1,5 @@
-<div ng-controller="citasController">
-	<h1>Seleccion el Tipo de Atención</h2>
+<div class="container" ng-controller="citasController">
+	<h1>Seleccione el Tipo de Atención</h2>
 	<div class="dropdown">
 		<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 		Tipo Atencion
