--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -28,8 +28,8 @@
                     <ul class="mainnav">
                         <li class="active dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-list-alt"></i><span>Catalogos</span> <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a ui-sref="especialidad">Especialidad</a></li>
                             <li><a ui-sref="odontologo">Odontólogo</a></li>
+                            <li><a ui-sref="especialidad">Especialidad</a></li>
                             <li><a ui-sref="tipoAtencionMedica">Tipo Atención Medica</a></li>
                             <li><a ui-sref="agendaOdontologo">Agenda Odontologo</a></li>
                             <li><a ui-sref="odontologoEspecialidad">Odontólogo Especialidad</a></li>
@@ -51,17 +51,18 @@
     
     <!-- Angular JS -->
     <script src="@routes.Assets.versioned("bower_components/angular/angular.min.js")"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.8/angular-filter.min.js"></script>
     <script src="@routes.Assets.versioned("bower_components/angular-ui-router/release/angular-ui-router.min.js")"></script>
     <script src="@routes.Assets.versioned("bower_components/angular-cookies/angular-cookies.min.js")"></script>
     <script src="@routes.Assets.versioned("bower_components/angular-resource/angular-resource.min.js")"></script>
     <script src="@routes.Assets.versioned("javascripts/angular/ui-bootstrap-tpls-0.14.3.min.js")"></script>
     <script src="@routes.Assets.versioned("javascripts/angular/admin.js")" ></script>
-    <script src="@routes.Assets.versioned("javascripts/angular/controllers/modal.js")" ></script>
     <script src="@routes.Assets.versioned("javascripts/angular/controllers/admin/especialidad.js")" ></script>
     <script src="@routes.Assets.versioned("javascripts/angular/controllers/admin/agendaOdontologo.js")" ></script>
     <script src="@routes.Assets.versioned("javascripts/angular/controllers/admin/odontologo.js")" ></script>
     <script src="@routes.Assets.versioned("javascripts/angular/controllers/admin/odontologoEspecialidad.js")" ></script>
     <script src="@routes.Assets.versioned("javascripts/angular/controllers/admin/tipoAtencionMedica.js")" ></script>
+    <script src="@routes.Assets.versioned("javascripts/angular/controllers/modal.js")" ></script>
     <script src="@routes.Assets.versioned("javascripts/angular/services/especialidad.js")" ></script>
     <script src="@routes.Assets.versioned("javascripts/angular/services/odontologo.js")" ></script>
     <script src="@routes.Assets.versioned("javascripts/angular/services/agendaOdontologo.js")" ></script>
