--- a/public/partials/admin/odontologoEspecialidad.html
+++ b/public/partials/admin/odontologoEspecialidad.html
@@ -18,7 +18,7 @@
 			</thead>
 			<tbody>
 				<tr ng-repeat="odontologoEspecialidad in agendaOdontologoList">
-					<td>{{odontologoEspecialidad.odoId.odoNombres}}</td>
+					<td>{{odontologoEspecialidad.odoId.odoNombres}} {{odontologoEspecialidad.odoId.odoApellidos}}</td>
 					<td>{{odontologoEspecialidad.espId.espNombre}}</td>
 					<td>{{odontologoEspecialidad.espId.espArea}}</td>
 					<td>{{odontologoEspecialidad.odeFechaRegistro | date:'dd/MMMM/yyyy'}}</td>
