--- a/public/partials/admin/tipoAtencionMedica.html
+++ b/public/partials/admin/tipoAtencionMedica.html
@@ -1,9 +1,10 @@
-<div class="container">
-	<button class="btn btn-success">Nuevo</button>
-</div>
-<br>
+<div ng-controller="modalController">
+	<div class="container">
+		<button ng-click="toggleModal()" class="btn btn-success">Nuevo</button>
+	</div>
+	<br>
 
-<div class="container">
+	<div class="container">
 
 		<table class="table table-bordered">
 			<thead>
@@ -24,9 +25,82 @@
 					<td>{{tipoAtencionMedica.tamNombreEspecialidad}}</td>
 					<td>{{tipoAtencionMedica.tamActivo}}</td>
 					<td>{{tipoAtencionMedica.tamFechaRegistro | date:'dd/MMMM/yyyy'}}</td>
-					<td><button class="btn btn-primary"><i class="icon-edit"></i></button></td>
-					<td><button class="btn btn-danger"><i class="icon-trash"></i></button></td>
+					<td><button ng-click="cargarInformacionEditar(tipoAtencionMedica);toggleEditModal();" class="btn btn-primary"><i class="icon-edit"></i></button></td>
+					<td><button ng-click="cargarInformacionEliminar(tipoAtencionMedica);toggleDeleteModal();" class="btn btn-danger"><i class="icon-trash"></i></button></td>
 				</tr>
 			</tbody>
 		</table>
+
+		<modal title="Crear Tipo Atención Medica" visible="showModal">
+			<form role="form" ng-submit="crearTipoAtencionMedica()">
+				<div class="form-group">
+					<input ng-model="nuevoTipoAtencionMedica.nombre" required type="text" placeholder="Nombre" class="form-control" />
+				</div>
+
+				<div class="form-group">
+					<input ng-model="nuevoTipoAtencionMedica.duracionHoras" required type="number" placeholder="Duración Horas" class="form-control" />
+				</div>
+
+				<div class="form-group">
+					<input ng-model="nuevoTipoAtencionMedica.duracionMinutos" required type="number" placeholder="Duración Minutos" class="form-control" />
+				</div>
+
+				<div class="dropdown">
+					<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						Especialidad
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+						<div ng-repeat="especialidad in especialidadList">
+							<li class="dropdown-header"><a href="" ng-click="escojerEspecialidad(especialidad)"><h5>{{especialidad.espArea}}</h5></a></li>
+						</div>
+					</ul>
+					{{especialidadEscojida.espArea}}
+				</div><br>
+
+				<button type="submit" ng-click="toggleModal()" class="btn btn-success">Confirmar</button>
+			</form>
+		</modal>
+
+		<modal title="Editar Tipo Atención Medica" visible="editShowModal">
+			<form role="form" ng-submit="crearTipoAtencionMedica()">
+				<div class="form-group">
+					<input ng-model="tipoAtencionMedicaEditar.tamNombre" required type="text" placeholder="Nombre" class="form-control" />
+				</div>
+
+				<div class="form-group">
+					<label for="">Horas</label>
+					<input ng-model="tipoAtencionMedicaEditar.tamDuracionHoras" required type="number" placeholder="Duración Horas" class="form-control" />
+				</div>
+
+				<div class="form-group">
+					<label for="">Minutos</label>
+					<input ng-model="tipoAtencionMedicaEditar.tamDuracionMinutos" required type="number" placeholder="Duración Minutos" class="form-control" />
+				</div>
+
+				<div class="dropdown">
+					<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						Especialidad
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+						<div ng-repeat="especialidad in especialidadList">
+							<li class="dropdown-header"><a href="" ng-click="escojerEspecialidad(especialidad)"><h5>{{especialidad.espArea}}</h5></a></li>
+						</div>
+					</ul>
+					{{especialidadEscojida.espArea}}
+				</div><br>
+
+				<button type="submit" ng-click="toggleModal()" class="btn btn-success">Confirmar</button>
+			</form>
+		</modal>
+
+		<modal title="Eliminar Tipo Atencion Medica" visible="deleteShowModal">
+			<form role="form" ng-submit="eliminarTipoAtencionMedica()">
+				<h4>¿Esta seguro de eliminar este registro?</h4>
+				<br>
+				<button type="submit" ng-click="toggleDeleteModal()" class="btn btn-danger">Eliminar</button>
+			</form>
+		</modal>
+	</div>
 </div>
