--- a/public/partials/home/partial-home-lista-citas.html
+++ b/public/partials/home/partial-home-lista-citas.html
@@ -1,6 +1,56 @@
 <div ng-controller="listaCitasController">
-	<h1>Lista de citas</h1>
-	<div ng-repeat="atencionMedica in listaCitas">
-		<h4>Fecha: <small>{{atencionMedica.atmFecha | date:'yyyy/MM//dd'}}</small> Hora: <small>{{atencionMedica.atmHoraInicio | date:'h:mma'}}</small> Duración:<small>{{atencionMedica.tamId.tamDuracionNem}}</small> Doctor: <small>{{atencionMedica.odoId.odoNombres}} {{atencionMedica.odoId.odoApellidos}}</small> Tipo Atencion: <small>{{atencionMedica.tamId.tamNombre}}</small></h4>
+	<div ng-controller="modalController">
+		<div class="container">
+			<h1>Lista de citas</h1>
+			<table class="table table-bordered">
+				<thead>
+					<tr>
+						<th>Fecha</th>
+						<th>Hora</th>
+						<th>Duración</th>
+						<th>Doctor</th>
+						<th>Tipo Atencion</th>
+						<th>Editar</th>
+						<th>Eliminar</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr ng-repeat="atencionMedica in listaCitas">
+						<td>{{atencionMedica.atmFecha | date:'yyyy/MM//dd'}}</td>
+						<td>{{atencionMedica.atmHoraInicio | date:'h:mma'}}</td>
+						<td>{{atencionMedica.tamId.tamDuracionNem}}</td>
+						<td>{{atencionMedica.odoId.odoNombres}} {{atencionMedica.odoId.odoApellidos}}</td>
+						<td>{{atencionMedica.tamId.tamNombre}}</td>
+						<td><button ng-click="toggleEditModal(); " class="btn btn-primary"><i class="icon-edit"></i></button></td>
+						<td><button ng-click="toggleDeleteModal(); cargarInformacionEliminar(atencionMedica,$index)" class="btn btn-danger"><i class="icon-trash"></i></button></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+
+		<modal title="Editar especialidad" visible="editShowModal">
+			<form role="form" ng-submit="editarEspecialidad()">
+				<div class="form-group">
+					<input ng-model="especialidadEditar.espNombre" required type="text" placeholder="Nombre" class="form-control" />
+				</div>
+
+				<div class="form-group">
+					<input ng-model="especialidadEditar.espArea" required type="text" placeholder="Area" class="form-control" />
+				</div>
+
+				<div class="form-group">
+					<h5>Activo <input ng-model="especialidadEditar.espActivo" type="checkbox" placeholder="Area" /></h5>
+				</div>
+				<button type="submit" ng-click="toggleEditModal()" class="btn btn-success">Confirmar</button>
+			</form>
+		</modal>
+
+		<modal title="Eliminar Cita" visible="deleteShowModal">
+			<form role="form" ng-submit="eliminarCita()">
+				<h4>¿Esta seguro de eliminar esta Cita?</h4>
+				<br>
+				<button type="submit" ng-click="toggleDeleteModal()" class="btn btn-danger">Eliminar</button>
+			</form>
+		</modal>
 	</div>
 </div>
