--- a/public/partials/home/partial-home-reservar-citas-odontologos.html
+++ b/public/partials/home/partial-home-reservar-citas-odontologos.html
@@ -1,8 +1,23 @@
-<div ng-controller="odontologosController">
+<div class="container" ng-controller="odontologosController">
 	<h2>{{especialidad.espArea}} -  {{tipoAtencionMedica.tamNombre}}</h2>
 	<h4>Duración: {{tipoAtencionMedica.tamDuracionNem}}</h4>
 	<h4>Seleccione el Odontologo</h4>
-	<div ng-repeat="odontologoEspecialidad in especialidad.odontologoEspecialidadList">
-		<a href="#/reservar-citas-horarios/{{especialidad.espId}}/{{tipoAtencionMedica.tamId}}/{{odontologoEspecialidad.odoId.odoId}}" class="btn btn-link">{{odontologoEspecialidad.odoId.odoNombres}} {{odontologoEspecialidad.odoId.odoApellidos}}</a>
-	</div>
+	<table class="table table-bordered">
+		<thead>
+			<tr>
+				<th>Nombre</th>
+				<th>Telefono</th>
+				<th>Email</th>
+				<th>Seleccionar</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="odontologoEspecialidad in especialidad.odontologoEspecialidadList">
+				<td>{{odontologoEspecialidad.odoId.odoNombres}} {{odontologoEspecialidad.odoId.odoApellidos}}</td>
+				<td>{{odontologoEspecialidad.odoId.odoTelefono}}</td>
+				<td>{{odontologoEspecialidad.odoId.odoEmail}}</td>
+				<td><a href="#/reservar-citas-horarios/{{especialidad.espId}}/{{tipoAtencionMedica.tamId}}/{{odontologoEspecialidad.odoId.odoId}}" class="btn btn-success"><i class="icon-ok"></i></a></td>
+			</tr>
+		</tbody>
+	</table>
 </div>
