--- a/app/views/emailConfirmed.scala.html
+++ b/app/views/emailConfirmed.scala.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Sonrisitas</title>
         <!-- Boostrap Css -->
-        <link rel="stylesheet" href="@routes.Assets.versioned("bower_components/bootstrap/dist/css/bootstrap.min.css")">
+        <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/style.css")">
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/signin.css")">
         <link href="@routes.Assets.versioned("stylesheets/font-awasome.css")" rel="stylesheet">
@@ -28,8 +28,7 @@
         <script src="@routes.Assets.versioned("bower_components/angular-cookies/angular-cookies.min.js")"></script>
         <script src="@routes.Assets.versioned("javascripts/angular/ui-bootstrap-tpls-0.14.3.min.js")"></script>
         <!-- Jquery JS -->
-        <script src="@routes.Assets.versioned("bower_components/jquery/dist/jquery.min.js")" ></script>
-        <!-- Bootstrap JS -->
-        <script src="@routes.Assets.versioned("bower_components/bootstrap/dist/js/bootstrap.min.js")" ></script>
+        <script src="@routes.Assets.versioned("javascripts/lib/bootstrap.min.js")" ></script>
+        <script src="@routes.Assets.versioned("javascripts/base.js")"></script>
     </body>
 </html>
