--- a/app/views/emailMessage.scala.html
+++ b/app/views/emailMessage.scala.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Email Message</title>
 		<!-- Boostrap Css -->
-		<link rel="stylesheet" href="@routes.Assets.versioned("bower_components/bootstrap/dist/css/bootstrap.min.css")">
+		<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
 		<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/styles.css")">
 		<link href="@routes.Assets.versioned("stylesheets/font-awasome.css")" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600" rel="stylesheet">
