--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Home</title>
     <!-- Boostrap Css -->
-    <link rel="stylesheet" href="@routes.Assets.versioned("bower_components/bootstrap/dist/css/bootstrap.min.css")">
+    <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
     <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap-responsive.min.css")">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600" rel="stylesheet">
     <link href="@routes.Assets.versioned("stylesheets/font-awasome.css")" rel="stylesheet">
@@ -64,9 +64,9 @@
     <script src="@routes.Assets.versioned("javascripts/angular/services/tipoAtencionMedica.js")" ></script>
     <!-- <script type="javascript" src="../js/angular/navBarController.js" ></script> -->
     <!-- Jquery JS -->
-    <script src="@routes.Assets.versioned("bower_components/jquery/dist/jquery.min.js")" ></script>
-    <!-- Bootstrap JS -->
-    <script src="@routes.Assets.versioned("bower_components/bootstrap/dist/js/bootstrap.min.js")" ></script>
+    <script src="@routes.Assets.versioned("javascripts/lib/jquery.min.js")" ></script>
+        <!-- Bootstrap JS -->
+    <script src="@routes.Assets.versioned("javascripts/lib/bootstrap.min.js")" ></script>
     <script src="@routes.Assets.versioned("javascripts/base.js")"></script>
 </body>
 </html>
