--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Sonrisitas</title>
         <!-- Boostrap Css -->
-        <link rel="stylesheet" href="@routes.Assets.versioned("bower_components/bootstrap/dist/css/bootstrap.min.css")">
+        <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/style.css")">
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/signin.css")">
         <link href="@routes.Assets.versioned("stylesheets/font-awasome.css")" rel="stylesheet">
@@ -37,8 +37,8 @@
         <script src="@routes.Assets.versioned("javascripts/angular/controllers/alerts.js")"></script>
         <!-- <script type="javascript" src="../js/angular/navBarController.js" ></script> -->
         <!-- Jquery JS -->
-        <script src="@routes.Assets.versioned("bower_components/jquery/dist/jquery.min.js")" ></script>
+        <script src="@routes.Assets.versioned("javascripts/lib/jquery.min.js")" ></script>
         <!-- Bootstrap JS -->
-        <script src="@routes.Assets.versioned("bower_components/bootstrap/dist/js/bootstrap.min.js")" ></script>
+        <script src="@routes.Assets.versioned("javascripts/lib/bootstrap.min.js")" ></script>
     </body>
 </html>
