--- a/public/partials/home/partial-home-lista-citas.html
+++ b/public/partials/home/partial-home-lista-citas.html
@@ -21,26 +21,73 @@
 						<td>{{atencionMedica.tamId.tamDuracionNem}}</td>
 						<td>{{atencionMedica.odoId.odoNombres}} {{atencionMedica.odoId.odoApellidos}}</td>
 						<td>{{atencionMedica.tamId.tamNombre}}</td>
-						<td><button ng-click="toggleEditModal(); " class="btn btn-primary"><i class="icon-edit"></i></button></td>
+						<td><button ng-click="toggleEditModal(); cargarInformacionEditar(atencionMedica)" class="btn btn-primary"><i class="icon-edit"></i></button></td>
 						<td><button ng-click="toggleDeleteModal(); cargarInformacionEliminar(atencionMedica,$index)" class="btn btn-danger"><i class="icon-trash"></i></button></td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
 
-		<modal title="Editar especialidad" visible="editShowModal">
-			<form role="form" ng-submit="editarEspecialidad()">
-				<div class="form-group">
-					<input ng-model="especialidadEditar.espNombre" required type="text" placeholder="Nombre" class="form-control" />
+
+		<modal title="Editar Cita" visible="editShowModal">
+			<form role="form" ng-submit="editarCita()" novalidate>
+				<div class="dropdown">
+					<label for="">Odontologo Actual: {{citaEditar.odoId.odoNombres}} {{citaEditar.odoId.odoApellidos}}</label>
+					<br>
+					<h5>Cambiar:</h5>
+					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" ng-click="cargarOdontologos()" aria-expanded="true">
+						Odontologo
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+						<div ng-repeat="odontologo in odontologoList">
+							<li><a ng-click="seleccionarOdontologo(odontologo)" href=""><h5>{{odontologo.odoNombres}} {{odontologo.odoApellidos}}</h5></a></li>
+						</div>
+					</ul>
+					{{odontologoSeleccionado.odoNombres}} {{odontologoSeleccionado.odoApellidos}}
 				</div>
 
 				<div class="form-group">
-					<input ng-model="especialidadEditar.espArea" required type="text" placeholder="Area" class="form-control" />
+					<label for="">Fecha Actual: {{citaEditar.atmFecha | date:'dd/MM/yyyy'}}</label>
+					<div>
+						<h5>Cambiar:</h5>
+						<input ng-model="nuevaCita.fecha" required type="date" placeholder="Nombre" class="form-control" />
+					</div>
 				</div>
 
-				<div class="form-group">
-					<h5>Activo <input ng-model="especialidadEditar.espActivo" type="checkbox" placeholder="Area" /></h5>
+				<div class="dropdown">
+					<label for="">Hora Actual: {{citaEditar.atmHoraInicio | date:'h:mma'}}</label>
+					<br>
+					<h5>Cambiar:</h5>
+					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" ng-click="seleccionarDia()" aria-expanded="true">
+						Hora
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+						<div ng-repeat="hora in horariosPermitidosDia">
+							<li><a ng-click="seleccionarHora(hora)" href=""><h5>{{hora | date:'h:mma'}}</h5></a></li>
+						</div>
+					</ul>
+					{{horaSeleccionada | date:'h:mma'}}
 				</div>
+				
+				<div class="dropdown">
+					<label for="">Tipo Atención Actual: {{citaEditar.tamId.tamNombre}}</label>
+					<br>
+					<h5>Cambiar:</h5>
+					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" ng-click="cargarTipoAtencionMedica(tipoAtencionMedicaList)" aria-expanded="true">
+						Tipo Atención Médica
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+						<div ng-repeat="tipoAtencionMedica in tipoAtencionMedicaList">
+							<li><a ng-click="seleccionarTipoAtencion(tipoAtencionMedica)" href=""><h5>{{tipoAtencionMedica.tamNombre}}</h5></a></li>
+						</div>
+					</ul>
+					{{tipoAtencionMedicaSeleccionada.tamNombre}}
+				</div>
+				<br>
+
 				<button type="submit" ng-click="toggleEditModal()" class="btn btn-success">Confirmar</button>
 			</form>
 		</modal>
