--- a/public/partials/admin/odontologo.html
+++ b/public/partials/admin/odontologo.html
@@ -98,7 +98,7 @@
 		</modal>
 
 		<modal title="Eliminar Odontologo" visible="deleteShowModal">
-			<form role="form" ng-submit="eliminarOdontolog()">
+			<form role="form" ng-submit="eliminarOdontologo()">
 				<h4>¿Esta seguro de eliminar este registro?</h4>
 				<br>
 				<button type="submit" ng-click="toggleDeleteModal()" class="btn btn-danger">Eliminar</button>
