--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Home</title>
+        <title>Admin</title>
         <!-- Boostrap Css -->
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap-responsive.min.css")">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600" rel="stylesheet">
         <link href="@routes.Assets.versioned("stylesheets/font-awasome.css")" rel="stylesheet">
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/style.css")">
-        
+
     </head>
     <body ng-app="AdminHome">
         <nav ng-controller="SessionNavBarController" class="navbar navbar-default container-fluid">
