--- a/public/partials/admin/odontologoEspecialidad.html
+++ b/public/partials/admin/odontologoEspecialidad.html
@@ -1,9 +1,10 @@
-<div class="container">
-	<button class="btn btn-success">Nuevo</button>
-</div>
-<br>
+<div ng-controller="modalController">
+	<div class="container">
+		<button ng-click="toggleModal()" class="btn btn-success">Nuevo</button>
+	</div>
+	<br>
 
-<div class="container">
+	<div class="container">
 
 		<table class="table table-bordered">
 			<thead>
@@ -11,20 +12,77 @@
 					<th>Odontologo</th>
 					<th>Especialidad</th>
 					<th>Área</th>
-					<th>Fecha Registro</th>
 					<th>Editar</th>
 					<th>Eliminar</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="odontologoEspecialidad in agendaOdontologoList">
+				<tr ng-repeat="odontologoEspecialidad in odontologoEspecialidadList">
 					<td>{{odontologoEspecialidad.odoId.odoNombres}} {{odontologoEspecialidad.odoId.odoApellidos}}</td>
 					<td>{{odontologoEspecialidad.espId.espNombre}}</td>
 					<td>{{odontologoEspecialidad.espId.espArea}}</td>
-					<td>{{odontologoEspecialidad.odeFechaRegistro | date:'dd/MMMM/yyyy'}}</td>
-					<td><button class="btn btn-primary"><i class="icon-edit"></i></button></td>
-					<td><button class="btn btn-danger"><i class="icon-trash"></i></button></td>
+					<td><button ng-click="toggleEditModal(); cargarInformacionEditar(odontologoEspecialidad)" class="btn btn-primary"><i class="icon-edit"></i></button></td>
+					<td><button ng-click="toggleDeleteModal(); cargarInformacionEliminar(odontologoEspecialidad,$index)" class="btn btn-danger"><i class="icon-trash"></i></button></td>
 				</tr>
 			</tbody>
 		</table>
+
+		<modal title="Crear Odontologo-Especialidad" visible="showModal">
+			<form role="form" ng-submit="crearOdontologoEspecialidad()">
+				<div class="dropdown">
+					<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						Odontólogo
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+						<div ng-repeat="odontologo in odontologoList">
+							<li class="dropdown-header"><a href="" ng-click="escogerOdontologo(odontologo)"><h5>{{odontologo.odoNombres}} {{odontologo.odoApellidos}}</h5></a></li>
+						</div>
+					</ul>
+					{{odontologoEscogido.odoNombres}} {{odontologoEscogido.odoApellidos}}
+				</div><br>
+
+				<div class="dropdown">
+					<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						Especialidad
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+						<div ng-repeat="especialidad in especialidadList">
+							<li class="dropdown-header"><a href="" ng-click="escogerEspecialidad(especialidad)"><h5>{{especialidad.espNombre}} - {{especialidad.espArea}}</h5></a></li>
+						</div>
+					</ul>
+					{{especialidadEscogida.espNombre}} - {{especialidadEscogida.espArea}}
+				</div><br>
+
+				<button type="submit" ng-click="toggleModal()" class="btn btn-success">Confirmar</button>
+			</form>
+		</modal>
+
+		<modal title="Editar Odontolgo Especialidad" visible="editShowModal">
+			<form role="form" ng-submit="editarOdontologoEspecialidad()">
+				<div class="dropdown">
+					<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						Especialidad
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+						<div ng-repeat="especialidad in especialidadList">
+							<li class="dropdown-header"><a href="" ng-click="escogerEspecialidad(especialidad)"><h5>{{especialidad.espNombre}} - {{especialidad.espArea}}</h5></a></li>
+						</div>
+					</ul>
+					{{especialidadEscogida.espNombre}} - {{especialidadEscogida.espArea}}
+				</div><br>
+				<button type="submit" ng-click="toggleEditModal()" class="btn btn-success">Confirmar</button>
+			</form>
+		</modal>
+
+		<modal title="Eliminar especialidad" visible="deleteShowModal">
+			<form role="form" ng-submit="eliminarOdontologoEspecialidad()">
+				<h4>¿Esta seguro de eliminar este registro?</h4>
+				<br>
+				<button type="submit" ng-click="toggleDeleteModal()" class="btn btn-danger">Eliminar</button>
+			</form>
+		</modal>
+	</div>
 </div>
