--- a/public/partials/admin/tipoAtencionMedica.html
+++ b/public/partials/admin/tipoAtencionMedica.html
@@ -26,7 +26,7 @@
 					<td>{{tipoAtencionMedica.tamActivo}}</td>
 					<td>{{tipoAtencionMedica.tamFechaRegistro | date:'dd/MMMM/yyyy'}}</td>
 					<td><button ng-click="cargarInformacionEditar(tipoAtencionMedica);toggleEditModal();" class="btn btn-primary"><i class="icon-edit"></i></button></td>
-					<td><button ng-click="cargarInformacionEliminar(tipoAtencionMedica);toggleDeleteModal();" class="btn btn-danger"><i class="icon-trash"></i></button></td>
+					<td><button ng-click="cargarInformacionEliminar(tipoAtencionMedica,$index);toggleDeleteModal();" class="btn btn-danger"><i class="icon-trash"></i></button></td>
 				</tr>
 			</tbody>
 		</table>
@@ -63,7 +63,7 @@
 		</modal>
 
 		<modal title="Editar Tipo Atención Medica" visible="editShowModal">
-			<form role="form" ng-submit="crearTipoAtencionMedica()">
+			<form role="form" ng-submit="editarTipoAtencionMedica()">
 				<div class="form-group">
 					<input ng-model="tipoAtencionMedicaEditar.tamNombre" required type="text" placeholder="Nombre" class="form-control" />
 				</div>
@@ -89,9 +89,13 @@
 						</div>
 					</ul>
 					{{especialidadEscojida.espArea}}
-				</div><br>
+				</div>
 
-				<button type="submit" ng-click="toggleModal()" class="btn btn-success">Confirmar</button>
+				<div class="form-group">
+					<h5>Activo <input ng-model="tipoAtencionMedicaEditar.tamActivo" type="checkbox" placeholder="Activo" /></h5>
+				</div>
+
+				<button type="submit" ng-click="toggleEditModal()" class="btn btn-success">Confirmar</button>
 			</form>
 		</modal>
 
